Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57043

Putting function as a handler for a signal does not work with QtQuick Compiler

XMLWordPrintable

      For example, try running this in Release mode (or explicitly enable CONFIG+=qtquickcompiler):

      MouseArea {
       anchors.fill: parent
       onClicked: function() { console.log("hello world"); }
      }
      

      To reproduce, run attached application in Release mode and try clicking on it.

        1. qtbug57043.tar.gz
          0.8 kB
          Joni Poikelin
        2. diff.jpg
          1.78 MB
          Oleg Yadrov
        For Gerrit Dashboard: QTBUG-57043
        # Subject Branch Project Status CR V

            erikv Erik Verbruggen
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes